<resources>
    <string name="app_name">GJana Fenix</string>

    <string name="id_tonic_life_str">ID Tonic Life</string>
    <string name="password_str">Contraseña</string>
    <string name="login_str">Iniciar sesión</string>
    <string name="remember_str">Recordar sesión</string>
    <string name="products_str">Productos</string>
    <string name="distributor_str">Mi Red</string>
    <string name="more_str">Más</string>
    <string name="profile_str">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_desc">Imagen del producto</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="categoryTitle">Categoría:</string>
    <string name="infoProductTitle">Información del producto:</string>
    <string name="quantityTitle">Cantidad</string>
    <string name="unidades">Unidades</string>
    <string name="checkout">Continuar compra</string>
    <string name="totalTitle">Total</string>
    <string name="shoppingCartTitle">Carrito de compras</string>
    <string name="empty_cart">El carrito está vacío</string>
    <string name="addressesTitle">Mis direcciones</string>
    <string name="addressDelivery">Entrega a domicilio</string>
    <string name="branchDelivery">Recoger en sucursal</string>
    <string name="mexicoName">México</string>
    <string name="usaName">Estados Unidos</string>
    <string name="continueLabel">Continuar</string>
    <string name="branchesTitle">Sucursales</string>
    <string name="payStr">Pagar</string>
    <string name="checkoutTitle">Confirma tu compra</string>
    <string name="totalToPay">Total a pagar</string>
    <string name="paymentMethodsTitle">Métodos de pago</string>
    <string name="toPay">Pagar</string>
    <string name="streetStr">Calle</string>
    <string name="addressesStr">Dirección</string>
    <string name="newDistLabel">Datos del nuevo distribuidor</string>
    <string name="zipCodeStr">Código postal</string>
    <string name="extNumStr">Número exterior</string>
    <string name="intNumStr">Número interior</string>
    <string name="colonyStr">Colonia</string>
    <string name="cityStr">Ciudad</string>
    <string name="stateStr">Estado</string>
    <string name="countryStr">País</string>
    <string name="personalDataStr">Datos personales</string>
    <string name="emailStr">Correo electrónico</string>
    <string name="nameStr">Nombre completo</string>
    <string name="maritalStatusStr">Estado civil</string>
    <string name="singleStr">Soltero</string>
    <string name="divorsedStr">Divorciado</string>
    <string name="marriedStr">Casado</string>
    <string name="windowerStr">Viudo</string>
    <string name="birthdayStr">Fecha de nacimiento</string>
    <string name="birthPlaceStr">Lugar de nacimiento</string>
    <string name="nacionalityStr">Nacionalidad</string>
    <string name="rfcStr">RFC</string>
    <string name="curpStr">CURP</string>
    <string name="phone1Str">Teléfono 1</string>
    <string name="phoneStr">Teléfono 2</string>
    <string name="identStr">Número de identificación</string>
    <string name="bankStr">Datos bancarios</string>
    <string name="bankNameStr">Nombre del banco</string>
    <string name="accountNameStr">Nombre de propietario</string>
    <string name="numAccountStr">Número de cuenta</string>
    <string name="clabeStr">CLABE</string>
    <string name="saveStr">Guardar</string>
    <string name="sendStr">Registrar</string>
    <string name="ordersTitle">Mis compras</string>
    <string name="promosTitle">Mis promociones</string>
    <string name="promosMessage">Aquí se muestran las promociones que has obtenido, consulta a tu administrador para hacer válida alguna de ellas.</string>
    <string name="edit">Editar</string>
    <string name="addAddressStr">Agregar dirección</string>
    <string name="aliasStr">Alias</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="product_name">Nombre del producto</string>
    <string name="clear">Limpiar búsqueda</string>
    <string name="nothing">Sin resultados</string>
    <string name="points_register">Repartir puntos</string>
    <string name="instru">Ingrese el ID Tonic Life y los puntos correspondientes y púlse en elegir. Cuando haya elegido a los distribuidores púlse en ek botón de asignar.</string>
    <string name="distri_ppoins">Registrar puntos</string>
    <string name="pickup">Elegir</string>
    <string name="error_tonic_life_id">Debe ingresar un ID Tonic Life</string>
    <string name="points_str">Puntos</string>
    <string name="error_points">Debe ingresar la cantidad de puntos</string>
    <string name="assign">Asignar</string>
    <string name="option1">Distribuir puntos</string>
    <string name="option2">Conservar puntos</string>
    <string name="orderStr">Ordenar</string>
    <string name="without_addresses">Sin direcciones agregadas</string>
    <string name="without_purchases">Aún no has realizado pedidos</string>
    <string name="without_promos">Aún no has alcanzado promociones</string>
    <string name="confirm">Confirmar</string>
    <string name="ownerNameStr">Nombre del propietario</string>
    <string name="countNumberStr">Número de cuenta</string>

</resources>